# intelligent-ops-agent

./: .env.example  .gitignore  2025-07-11-srcagentsintelligent.txt  ARCHITECTURE.md  ARCHITECTURE_SIMPLIFIED.md  CLAUDE.md  README.md  hello.py  langgraph.json  package-lock.json  pyproject.toml  requirements.txt  studio_test_examples.md  备份.txt  重构.txt  重构设计聊天记录.txt
config/: graphiti_config.py
docs/: architecture.md  deepseek_integration.md  design.md  langgraph_server_setup.md  studio_test_examples.md  task.md
examples/: basic_usage.py  complete_demo.py  deepseek_test.py  multi_agent_scenario.py  quick_deepseek_test.py  test_dspy_modules.py  test_graphiti_connection.py  test_memory_infrastructure.py  test_router_basic.py  test_smart_router.py
scripts/: setup_chat_ui_manual.sh  start_server.sh
src/agents/: intelligent_ops_agent.py  intelligent_ops_agent_studio.py
src/dspy_modules/: __init__.py  action_planner.py  alert_analyzer.py  diagnostic_agent.py  intelligent_info_collector.py  intelligent_router.py  memory_retrieval.py  natural_language_understanding.py  report_generator.py  smart_router.py  task_router.py
src/langgraph_workflow/: __init__.py  ops_workflow.py  ops_workflow_studio.py  state_manager.py  workflow_nodes.py
src/memory/: __init__.py  episode_manager.py  graphiti_client.py
src/utils/: __init__.py  llm_config.py
